<resources>
    <string name="app_name">ODC Finder</string>
    <string name="nav_header_text">Judul Agak Besar</string>
    <string name="nav_header_detail_text">Judul Kecil</string>
    <string name="logout">Keluar</string>
    <string name="about">Tentang</string>
    <string name="profile">Profil</string>
    <string name="list_odc">List ODC</string>
    <string name="search_odc">Cari ODC</string>
    <string name="home">Beranda</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDwAYkPssy2f_E1QFoiigveZdwPabY5fdY</string>
    <string name="title_activity_login">Login</string>

    <!-- Strings Profile -->
    <string name="prompt_username"><b>Username</b></string>
    <string name="prompt_password">Password</string>
    <string name="prompt_name"><b>Name</b></string>
    <string name="action_sign_in">Login</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="token_fake_json">O96n4fneUTZmwhtKuZUBpQ</string>
    <string name="prompt_nik">Nik</string>
    <string name="prompt_no_hp">No Hp</string>

</resources>
