<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/menu_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home"/>
        <item android:id="@+id/menu_search"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/search_odc"/>
        <item android:id="@+id/menu_list"
            android:icon="@drawable/ic_list_black_24dp"
            android:title="@string/list_odc"/>
        <item android:id="@+id/menu_profile"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/profile"/>
        <item android:id="@+id/menu_about"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/about"/>
        <item android:id="@+id/menu_logout"
            android:icon="@drawable/ic_input_black_24dp"
            android:title="@string/logout"/>
    </group>
</menu>