<ScrollView android:id="@+id/login_form"
    android:background="@color/colorPrimaryDark"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgLogoLogin"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="24dp"
            android:src="@drawable/logo_panjang"/>

        <android.support.v7.widget.CardView
            android:id="@+id/loginCard"
            android:layout_margin="24dp"
            app:cardCornerRadius="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linearCardView"
                android:orientation="vertical"
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputLayout
                    android:textColorHint="@color/colorPrimary"
                    app:hintTextAppearance="@color/colorPrimary"
                    android:backgroundTint="@color/colorPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/txtUsername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/colorPrimary"
                        android:textColor="@color/colorPrimary"
                        android:backgroundTint="@color/colorPrimary"
                        android:hint="@string/prompt_username"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:textColorHint="@color/colorPrimary"
                    app:hintTextAppearance="@color/colorPrimary"
                    android:backgroundTint="@color/colorPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/txtPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:imeActionId="6"
                        android:imeActionLabel="@string/action_sign_in"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:textColorHint="@color/colorPrimary"
                        android:textColor="@color/colorPrimary"
                        android:backgroundTint="@color/colorPrimary"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/email_sign_in_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textColor="@android:color/white"
                    android:backgroundTint="@color/colorPrimary"
                    android:text="@string/action_sign_in"
                    android:textStyle="bold" />


            </LinearLayout>
        </android.support.v7.widget.CardView>

        <ImageView
            android:id="@+id/imgLogoLoginBottom"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginTop="8dp"
            android:layout_gravity="bottom"
            android:src="@drawable/utlogo"/>


    </LinearLayout>
</ScrollView>
