<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="userModel"
            type="com.perusahaan.fullname.odcfinder.model.UserModel">
        </variable>
    </data>
    <android.support.design.widget.CoordinatorLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ProfileNewActivity"
        android:fitsSystemWindows="false">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:fitsSystemWindows="true">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:statusBarScrim="@color/colorPrimary"
                app:contentScrim="@color/colorPrimary">

                <ImageView
                    android:id="@+id/imgProfile"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:src="@drawable/img_profile"
                    android:scaleType="fitXY"
                    android:contentDescription="@string/about" />

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbarProfile"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@android:color/transparent"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                    app:layout_scrollFlags="enterAlways"

                    app:layout_collapseMode="pin" />

            </android.support.design.widget.CollapsingToolbarLayout>

        </android.support.design.widget.AppBarLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:layout_anchor="@id/collapsing_toolbar"
            app:layout_anchorGravity="bottom|end"
            android:layout_margin="16dp"
            app:srcCompat="@drawable/ic_camera_alt_black_24dp"
            android:focusable="true" />

        <ScrollView
            android:id="@+id/profileScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:nestedScrollingEnabled="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            >
            <LinearLayout
                android:id="@+id/profileLinearView"
                android:orientation="vertical"
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <android.support.design.widget.TextInputLayout
                    android:textColorHint="@color/colorPrimary"
                    android:backgroundTint="@color/colorPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:enabled="false"
                        android:id="@+id/txtNik"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/colorPrimary"
                        android:textColor="@color/colorPrimary"
                        android:backgroundTint="@color/colorPrimary"
                        android:hint="@string/prompt_username"
                        android:inputType="text"
                        android:maxLines="1"
                        android:text="@{userModel.nik}"
                        android:singleLine="true"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:textColorHint="@color/colorPrimary"
                    android:backgroundTint="@color/colorPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:enabled="false"
                        android:id="@+id/txtProfileUsername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/colorPrimary"
                        android:textColor="@color/colorPrimary"
                        android:backgroundTint="@color/colorPrimary"
                        android:hint="@string/prompt_username"
                        android:inputType="text"
                        android:maxLines="1"
                        android:text="@{userModel.username}"
                        android:singleLine="true"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:textColorHint="@color/colorPrimary"
                    android:backgroundTint="@color/colorPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:enabled="false"
                        android:id="@+id/txtProfileName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_name"
                        android:inputType="text"
                        android:maxLines="1"
                        android:text="@{userModel.nama}"
                        android:selectAllOnFocus="true"
                        android:textColorHint="@color/colorPrimary"
                        android:textColor="@color/colorPrimary"
                        android:backgroundTint="@color/colorPrimary"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:textColorHint="@color/colorPrimary"
                    android:backgroundTint="@color/colorPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:enabled="false"
                        android:id="@+id/txtNoHp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_no_hp"
                        android:inputType="text"
                        android:maxLines="1"
                        android:text="@{userModel.noHp}"
                        android:selectAllOnFocus="true"
                        android:textColorHint="@color/colorPrimary"
                        android:textColor="@color/colorPrimary"
                        android:backgroundTint="@color/colorPrimary"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </ScrollView>

    </android.support.design.widget.CoordinatorLayout>

</layout>
